# swarm

./: .gitignore  CLAUDE.md  PLAN.md  README.md  RESEARCH.md  ROADMAP.md  first_opinion.md  learnings_from_6agents.md  plan.md  pyproject.toml  second_opinion_swarm.md  swarm.py
.claude-plugin/: marketplace.json  plugin.json
skills/swarm/: SKILL.md
src/swarm/: agent.py  cli.py  config.py  hooks.py  maker.py  opinion.py
swarm/: __init__.py  __main__.py  config.py  maker.py  memory.py
