[project]
name = "swarm-maker"
version = "0.1.0"
description = "MAKER-informed multi-agent collective intelligence for Claude Code"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"

[project.scripts]
swarm = "swarm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/swarm"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
